# csci5622-project-GANN

blackjack_engine/: .gitignore  .qmake.stash  BlackjackEngine  CMakeCache.txt  CMakeLists.txt  blackjackutils.h  cmake_install.cmake  dealer.h  dealerplayer.h  evolutionstrategybase.h  fann_float_source.cpp  idealplayer.h  main.cpp  ndeckshoe.h  nn_player.h  playerbase.h  randomplayer.h  runOnCluster.sh  sync_functions.h
fann/fann-master/src/: fann_io.c
fann/test/: CMakeCache.txt  CMakeLists.txt  Makefile  Test  cmake_install.cmake  fann_float_source.cpp  makeout.txt  test_fann.cpp  xor_fixed.net  xor_float.net
